fix: correct header name scaling on mobile

--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ body {
 #name {
     font-family: "JetBrains Mono", monospace;
     font-weight: 800;
-    font-size: clamp(32px, 5vw, 60px);
+    font-size: clamp(36px, 5vw, 60px);
     color: rgb(245, 245, 245);
     padding: 0px;
     margin-top: 10px;
